[metadata]
name = pyoorb
author = pyoorb Developers
license = BSD 3-Clause License
license_file = LICENSE.rst
url = http://githb.com/mkelley/pyoorb
description = Python interface to openorb
long_description = file: README.rst
keywords = astronomy, science
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
# # We set packages to find: to automatically find all sub-packages
# packages = find:
# # requires =
# #     numpy
# #     pyerfa
zip_safe = False
# # tests_require = pytest-astropy
# setup_requires = setuptools_scm
# # install_requires =
# #     numpy>=1.17
# #     pyerfa>=1.7,<1.7.2
python_requires = >=3.7

#[options.packages.find]
#exclude = astropy._dev

# [options.entry_points]
# console_scripts =
#     fits2bitmap = astropy.visualization.scripts.fits2bitmap:main
#     fitscheck = astropy.io.fits.scripts.fitscheck:main
#     fitsdiff = astropy.io.fits.scripts.fitsdiff:main
#     fitsheader = astropy.io.fits.scripts.fitsheader:main
#     fitsinfo = astropy.io.fits.scripts.fitsinfo:main
#     samp_hub = astropy.samp.hub_script:hub_script
#     showtable = astropy.table.scripts.showtable:main
#     volint = astropy.io.votable.volint:main
#     wcslint = astropy.wcs.wcslint:main
# asdf_extensions =
#     astropy = astropy.io.misc.asdf.extension:AstropyExtension
#     astropy-asdf = astropy.io.misc.asdf.extension:AstropyAsdfExtension

# [options.extras_require]
# test =
#     pytest-astropy>=0.8
#     pytest-xdist
#     objgraph
#     ipython>=4.2
#     coverage
#     skyfield>=1.20
#     sgp4>=2.3
# all =
#     scipy>=1.1
#     dask[array]
#     h5py
#     beautifulsoup4
#     html5lib
#     bleach
#     PyYAML>=3.13
#     pandas
#     sortedcontainers
#     pytz
#     jplephem
#     matplotlib>=3.0
#     mpmath
#     asdf>=2.6
#     bottleneck
#     ipython>=4.2
#     pytest
# docs =
#     sphinx
#     sphinx-astropy>=1.3
#     pytest
#     PyYAML>=3.13
#     scipy>=1.1
#     matplotlib>=3.1

# [options.package_data]
# * = data/*, data/*/*, data/*/*/*, data/*/*/*/*, data/*/*/*/*/*, data/*/*/*/*/*/*
# astropy = astropy.cfg, CITATION
# astropy.utils.tests = data/.hidden_file.txt
# astropy.wcs = include/*/*.h
# astropy.wcs.tests = extension/*.c
