[metadata]
name = pyoorb
author = Michael S. P. Kelley
license = BSD 3-Clause License
license_file = LICENSE.rst
url = http://githb.com/mkelley/pyoorb-experiment
description = pip-installable Python interface to openorb
long_description = file: README.rst
keywords = astronomy, science
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
zip_safe = False
install_requires =
    numpy>=1.17
python_requires = >=3.7
